--- a/informative.css
+++ b/informative.css
@@ -67,7 +67,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: black;
+    background-color: white;
     height: 100px;
 }
 
@@ -77,7 +77,7 @@ li {
 
 li a {
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     padding-top: 40px;
     padding-right:15px;
